--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <title> <%= "Banking - RTB" %>  </title>
+    <title><%= "Games Database (Weiqi/Daoqi)" %></title>
     <link href="/stylesheets/default.css" media="screen" rel="stylesheet" type="text/css"/>
     <%= stylesheet_link_tag "/extjs/resources/css/ext-all.css" %>
     <%= javascript_include_tag :defaults %>
@@ -12,16 +12,17 @@
     <%= active_scaffold_includes %></head>
   <body>
     <script language="JavaScript">
-        Ext.onReady(function(){
-            Ext.QuickTips.init();
+      Ext.onReady(function(){
+        Ext.QuickTips.init();
 
-            var tb = new Ext.Toolbar();
-            tb.render("toolbar");
-            tb.add({text: "Tourment", handler: function(){window.location.href = "/tournament"}},
-                {text: "Player", handler: function(){window.location.href = "/player"}},
-                {text: "Game", handler: function(){window.location.href = "/game"}}
-            );
-        });
+        var tb = new Ext.Toolbar();
+        tb.render("toolbar");
+        tb.add(
+	        {text: "Tourment", handler: function(){window.location.href = "/tournament"}},
+          {text: "Player", handler: function(){window.location.href = "/player"}},
+          {text: "Game", handler: function(){window.location.href = "/game"}}
+        );
+      });
     </script>
     <div id="container" align="right">
       <div id="toolbar"></div>
